--- a/src/components/CommandArea/CommandArea.module.scss
+++ b/src/components/CommandArea/CommandArea.module.scss
@@ -1,7 +1,7 @@
 .cmd {
     resize: none;
-    height: 200px;
     outline: none;
+    font-size: 0.8rem;
     border: 3px black solid;
     font-family: 'Windows Command Prompt', sans-serif;
     scrollbar-color: black;
