--- a/src/components/ShowStep/ShowStep.module.scss
+++ b/src/components/ShowStep/ShowStep.module.scss
@@ -3,6 +3,7 @@
     outline: none;
     border: 3px black solid;
     background-color: black;
+    font-size: 0.8rem;
     color: white;
     text-align: center;
     font-family: 'Windows Command Prompt', sans-serif;
