--- a/src/components/ShowStepItemStack/ShowStepItemStack.module.scss
+++ b/src/components/ShowStepItemStack/ShowStepItemStack.module.scss
@@ -4,6 +4,7 @@
     padding: 2px;
     color: white;
     display: flex;
+    font-size: 0.7rem;
     align-items: center;
     justify-content: center;
     margin-bottom: 2px;
